--- a/css/style.css
+++ b/css/style.css
@@ -2732,7 +2732,7 @@ tbody.collapse.show {
 
 @media (min-width: 576px) {
   .navbar-expand-sm {
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: flex-start; }
     .navbar-expand-sm .navbar-nav {
       flex-direction: row; }
@@ -2740,7 +2740,7 @@ tbody.collapse.show {
         position: absolute; }
       .navbar-expand-sm .navbar-nav .dropdown-menu-right {
         right: 0;
-        left: auto; }
+        left: 0; }
       .navbar-expand-sm .navbar-nav .nav-link {
         padding-right: 0.5rem;
         padding-left: 0.5rem; }
@@ -3435,7 +3435,7 @@ tbody.collapse.show {
   background-size: 1rem 1rem; }
 
 .progress-bar-animated {
-  animation: progress-bar-stripes 1s linear infinite; }
+  animation: progress-bar-stripes 0.4s linear infinite; }
 
 .media {
   display: flex;
